Wed Jun 27 15:07:37 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Makefile.am: Added Dynamic_Test.

Wed Jun 27 13:54:35 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.inl (sema_wait): Allow a 0 time value to indicate
          "poll" semantics on the semaphore in the WinCE case, as it does in
          the other Windows cases. Thanks to Shaolong Xiang for this fix.

        * ace/Malloc_T.h: Improved the documentation for ACE_Malloc_T
          regarding what pools to use with it and what the requirements are
          for a pool that's used with ACE_Malloc_T.

        * netsvcs/clients/Naming/Dump_Restore/Dump_Restore.mpc: Removed the
          Netsvcs_Dump_Restore_Lib project, which built only one file into
          a DLL to link with the main program from Netsvcs_Dump_Restore. Add
          that one file, Dump_Restore.cpp, to the main Netsvcs_Dump_Restore
          project. Also renamed the resultant executable dump_restore.
          This split was a hold-over from the pre-MPC days when it was hard
          to build an exe from more than one file.

        * netsvcs/clients/Naming/Dump_Restore/Dump_Restore.h: No need to
          declare Dump_Restore exported any longer; it's not built into a DLL.

        * netsvcs/clients/Naming/Dump_Restore/Dump_Restore.cpp: This doesn't
          need to include "ace/Service_Config.h" any longer.

        * netsvcs/clients/Naming/Client/Client.mpc: Removed the
          Netsvcs_Client_Test_Lib project, which built only one file into
          a DLL to link with the main program from Netsvcs_Client_Test. Add
          that one file, Client_Test.cpp, to the main Netsvcs_Client_Test
          project. Also renamed the resultant executable client_test.
          This split was a hold-over from the pre-MPC days when it was hard
          to build an exe from more than one file.

        * netsvcs/clients/Naming/Client/Client_Test.{h cpp}: